syntax = "proto3";

package com.madr.external_dictionaries.protobuf;

message WiktionaryResponse {
    repeated BakedWiktionaryWord words = 1;
}

message BakedWiktionaryWord {
    WiktionaryMain id = 1;
    repeated WiktionarySense senses = 2;
}

message WiktionaryMain {
    string word = 1;
    string part_of_speech = 2;
    optional string etymology = 3;
    optional string ipa = 4;
}

message WiktionarySense {
    repeated WiktionaryExample examples = 1;
    repeated Gloss glosses = 2;
}

message WiktionaryExample {
    string text = 1;
    optional string ref = 2;
    optional string type = 3;
}

message Gloss {
    string gloss = 1;
}
